--- a/iw7/iw7.vcxproj
+++ b/iw7/iw7.vcxproj
@@ -147,6 +147,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Commands.hpp" />
     <ClInclude Include="iw7.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -167,4 +168,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="iw7.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
